--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,10 +1,50 @@
-/*
-Colors to use:
-dark blue: #06365f
-light blue: #1c5380
-*/
 
+/*Colors to use:
+dark blue: #06365f
+light blue: #1c5380*/
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  margin-left: 10%;
+  margin-right: 10%;
+  background: linear-gradient(to bottom, #06365f 0%,#06365f 40%,white 40%, white 60%,white 100%);
+  }
+.top-content{
+    width: 600px;
+    padding-top: 100px;
+    display: inline;
+    float: right;
+    margin-bottom: 0;
+  }
+.clear-float{
+  clear: both;
+}
+.phones{
+  padding-top: 100px;
+  float: left;  
+}
+.box-text{
+  width: 600px;
+  height: 450px;
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  float: right;
+}
+.box-text h2{
+  padding-left: 5%;
+  padding-right: 10%;
+  font: arial;
+  font-size: 26px;
+  color: #06365f;
+}
+.box-text p{
+  padding-left: 5%;
+  padding-right: 10%;
+  font: arial;
+  font-weight:normal; 
+  font-size: 20px;
+}
+footer{
+  margin: 5% 20% 5% 20%;
+ 
 }
