--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,132 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  font-size: 10px;
+  position: relative;
+}
+
+.contenedorPrincipal{
+  width: 1300px;
+}
+
+.contenedorSuperior{
+  height: 280px;
+  background-color: #0f4777d9;
+  position: relative;
+}
+
+.instagramImg{
+  position: absolute;
+  top: 120px;
+  right: 532px;
+  width: 20%;
+}
+
+.frame{
+  background-image: url(../images/bgtile.png);
+  background-position: 0% 0%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100px;
+  height: 49px;
+  right: 350px;
+  float: right;
+  top: 125px;
+  position: absolute;
+  text-align: left;
+  border: 1px solid #0f4777d9;
+  border-radius: 3px;
+}
+
+.frame img{
+  padding: 14px;
+  position: absolute;
+}
+
+.home{
+  position: absolute;
+  top: 142px;
+  right: 365px;
+  color: white;
+  font-size: .8rem;
+  font-weight: bold;
+  }
+
+.contenedorInferior{
+  height: 340px;
+  background-color: white;
+  position: relative;
+}
+
+.capture{
+  float: right;
+  width: 28%;
+  text-align: left;
+  position: absolute;
+  right: 350px;
+  top: -70px;
+  padding: 0 40px 0 40px;
+  height: 380px;
+  background-image: url(../images/frame.png);
+  background-position: 0% 0%;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.capture h1{
+  width: 80%;
+  color: #0f4777d9;
+  font-size: 1.8rem;
+}
+
+.capture p{
+  font-size: .9rem;
+}
+
+.capture p span{
+  whidt: 80%;
+  font-weight: bold;
+}
+
+.capture img{
+  padding: 10px 15px 0 0;
+  width: 32%;
+}
+
+.phones{
+  float:left;
+  width: 40%;
+  text-align: center;
+}
+
+.phones img{
+  position: absolute;
+  top: -180px;
+  left: 140px;
+  width: 24%;
+}
+
+.corrigeDist{
+  clear: both;
+}
+
+nav ul li{
+  list-style: none;
+  display: inline;
+  color: #0f4777d9;
+  font-weight: bold;
+}
+
+.alineaNav{
+  position: absolute;
+  left: 260px;
+}
+
+.alineaNav li{
+  padding-right: 19px;
+}
+
+.alineaNav span{
+  color: gray;
+  font-weight: bold;
 }
