--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,88 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.father{
+  background-color: #1c5380;
+  position: relative;
+  height: 300px;
+}
+.father button{
+background-color: #1c5380;
+color: #fff;
+width: 90px;
+padding: 5px 0;
+font-weight: bold;
+font-size: 12px;
+}
+
+.log{
+  border:#06365f 1px solid;
+  display: inline-block;
+  position: absolute;
+  top: 135px;
+  right: 200px;
+}
+
+.log img{
+  margin-right: 10px;
+}
+
+.head-logo{
+  position: absolute;
+  top: 120px;
+  left: 630px;
+}
+#text-frame{
+  width: 35%;
+  background-color: #fff;
+  position: absolute;
+  right: 150px;
+  top: 225px;
+  padding: 15px 40px; 
+  border-radius: 5px;
+}
+#text-frame h2{
+  color: #06365f;
+}
+
+.phones{
+  position: absolute;
+  top: 100px;
+  left: 225px;
+}
+
+
+
+.bottom-links{
+  display: block;
+    float: right;
+    padding: 0px;
+    margin: 0px 20px 0 0;
+    position: absolute;
+    bottom: 0px;
+    left: 350px;
+}
+
+.bottom-links a{
+  color: #1c5380;
+  font-weight: bold;  
+  font-size: 14px;
+  text-decoration: none;
+}
+.bar-li {
+  display: inline-block;
+  margin: 0 5px;
+}
+
+.copy{
+  color: #5d5d5e;
+  font-weight: bold;
+  font-size: 12px; 
+}
+.log-button{
+  background-color: #1c5380;
+}
+.brands{
+  margin: 10px 25px 10px 0;
+}
