--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -6,5 +6,55 @@ light blue: #1c5380
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  margin: 10px;
 }
+header img{
+position: relative;
+left:500px;
+top: 50px;
+}
+
+header button{
+  position: relative;
+  left:500px;
+  top: 60px;
+}
+
+.frase{
+  font-size: 145.5%;
+color:darkslateblue;
+}
+header{
+  background-color:darkslateblue
+  ;
+  width: 100%;
+  height: 200px;
+  float:right;
+  position:relative;
+  left:10px;
+}
+
+div#caja1{
+  margin:20px;
+  width: 30%;
+height: 500px;
+float:left;
+background-color: white;
+}
+div#caja2{
+  padding:50px;
+  width: 500px;
+height: 300px;
+float:right;
+text-decoration-color: white;
+background-color: white;
+}
+
+.pie {
+
+  height:10px;
+ margin-left: -40px;
+position:relative;
+top:150px;
+float:bottom;
+};
