--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,4 +1,4 @@
-/*
+/* d
 Colors to use:
 dark blue: #06365f
 light blue: #1c5380
@@ -8,3 +8,106 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.blue{
+  width: 100%;
+  height: 200px;
+  background: #436c8f;
+}
+
+.secondback{
+  width: 100%;
+  height: 100%;
+  background: #ffffff;
+}
+
+.content{
+  width: 1000px;
+  height: 500px;
+  background: #ffffff;
+  display:top;
+  position:top;
+  padding-left:100px;
+  padding-top:0px;
+}
+
+
+
+.blocks{
+  width: 200px;
+  height: 500px;
+  border:1px solid #eaeaea;
+  margin: 10px;
+  display: inline-flex;
+  float:left;
+}
+
+.blocks2{
+  width: 600px;
+  height: 500px;
+  border:1px solid #eaeaea;
+  margin: 10px;
+  display: inline-flex;
+  float:left;
+}
+
+.square{
+  width: 100%;
+  height: 50px;
+  background: black;
+  margin: 8px;
+}
+
+ul {
+  list-style: none;
+  margin: 20px 0px 20px 0px;
+  padding-left: 20px;
+}
+
+h1{
+  color:#06365f;
+}
+
+img{
+  wewidth: 450px;
+  height: 50px;
+  margin-top 80px;
+}
+
+.other{
+  list-style: none;
+  display: inline-flex;
+  margin: 10px;
+  color:#1c5380;
+  font-weight: 400;
+  padding-top:20px;
+
+}
+
+.link{
+  display: inline-flex;
+  margin: 10px;
+  color:#646464;
+  font-weight: 400;
+  padding-top:20px;
+}
+
+li {
+  margin:10px;
+  font-weight: 350;
+  color:#666666;
+}
+
+.button{
+  display: inline-flex;
+  padding-left: 0px;
+  wewidth: 450px;
+  height: 50px;
+  margin-top 80px;
+ }
+
+.down {
+ position: relative;
+ text-align: center;
+}
+  
