Lab Instagram PR

--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,113 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+.upper{
+  background: linear-gradient(#1c5380,#06365f);
+  width: 100%;
+  height: 100%;
+}
+.title {
+  padding: 0% 0 8% 0;
+  width: 180%;
+  height: auto;
+  font-size: 1vw;
+}
+h3 {
+  color: #1c5380;
+}
+.login {
+  padding: 1vw 1vw 1vw 1vw;
+  margin: -3% 50% 0 0;
+  border: solid #06365f 2px;
+  border-radius: 5px;
+  background: #1c5380;
+  color: white;
+  text-decoration: none;
+  font-size: 1vw;
+  height: auto;
+  width: 3%;
+  float: right;
+}
+.home {
+  width: 25%;
+  height: auto;
+  vertical-align: -10%;
+  margin: 0 5px 0 0;
+}
+.middle {
+  vertical-align: middle;
+  margin: 15% 0 0 50%;
+  width: 28%;
+  height: auto;
+  padding: 0;
+}
+.iphone {
+  margin: -17% 0 0 10%;
+  width: 75%;
+  height: auto;
+  display: inline-block;
+}
+.iphone img {
+  width: 40%;
+  height: auto;
+}
+.texto {
+  background-image: url("/Users/LeFinancier/code/Semana1/Sabado/lab-css-instagram-clone/starter-code/images/frame.png");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  width: 27%;
+  display: inline-block;
+  right: 20%;
+  padding: 0 1% 1% 2%;
+  font-family: Tahoma, Geneva, sans-serif;
+  font-weight: 100;
+}
+.position {
+  margin: -38% 0 0 44%;
+  width: 180%;
+  height: auto;
+  display: inline-block;
+  font-size: 1.7vw;
+}
+.badges-app {
+  width: 40%;
+  height: auto; 
+  margin: 0 3% 0 0;
+}
+.badges-goo {
+  width: 37%;
+  height: auto; 
+}
+.footer {
+  color: #1c5380;
+  font-weight: bold;
+  text-transform: uppercase;
+  font-size: 1vw;
+  display: inline;
+  border-spacing: 1%;
+}
+.list {
+  
+  margin: auto;
+}
+li {
+  float: left;
+  list-style-type: none; 
+  text-align: center;
+  width: 5%;
+  margin: 0;
+}
+.insta {
+  color: lightgray;
+  width: 10%;
+}
+.api {
+  width: 2%;
+}
+.press {
+  width: 3%;
+}
+.center {
+  padding: 2% 0 5% 20%;
+  width: 170%;
+}
