--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,105 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  font-size: 10px;
+  padding: 0;
 }
+.fondo-azul{
+  width: 100%;
+  height: 300px;
+  background-color: #06365f;
+  position: relative;
+
+}
+.fondo-blanco{
+  width: 100%;
+  height: 300px;
+  background:#ffff;
+  
+}
+.contenedor{
+
+  height: 500px;
+  width: 900px;
+  position: absolute;
+  margin-left: 550px;
+  margin-top: -200px;
+
+}
+
+
+.img-insta{
+  position: absolute;;
+  margin-left: 15px;
+
+}
+p{
+
+  width: 500px;  
+  position: absolute;
+  margin-left: 350px;
+  margin-top: -400px;
+
+
+
+}
+.boton-log{
+  margin-top: 15px;
+  margin-right: 2px;
+  position: relative;
+   
+  }
+
+  .text {
+    position: relative;
+    font-size: 1.6em;
+
+  }
+
+  .login{
+    background: #1c5380;
+    color: #ffff;
+    position: absolute;
+    margin-left: 700px;
+    margin-top: -500px;
+    width: 110px;
+    height: 50px;
+    text-align: center;
+    padding: 1px;
+    font-size: 1.3em;
+    }
+
+    #encabezado{
+      font-size: 2em;
+      color: #06365f;
+      font-weight: bold;
+      position: absolute;
+      background-color: #ffffff
+     
+    }
+ 
+    .downloadapple{
+      position: relative;
+      margin-left: 95px;
+      padding-top: 40px;  
+      padding-right:10px;
+      
+     
+    }
+
+    .footer{
+      background: #ffffff;
+     font-size: 2em;
+     margin: 60px 550px;
+     width: 900px;
+     color: #9f9f9f;
+     
+
+    }
+
+    a{
+      text-decoration: none;
+      color: #1c5380;
+      margin: 10px;
+      ;
+    }
