--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -6,5 +6,82 @@ light blue: #1c5380
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+
+  margin: 8%;
+  padding:55px;
+  height: 100%;
+  background-image: url("../images/bgtile.png");
+  background-repeat: no-repeat;
+  background-size: 100% 270px;
+}
+
+.phoneimg {
+  float: left;
+  margin-left: 10%;
+}
+
+section {
+  width: 40%;
+  padding-right: 15%;
+  height: 100%;
+  float: right;
+}
+
+.instagram-logo {
+  vertical-align: middle;
+  margin-right: 5%;
+}
+
+button {
+  padding: 5px;
+  width: 25%;
+  background-color: #1c5380;
+  color: white;
+  border-style: ridge;
+  border-color: #1c5380;
+  font-weight: bold;
+}
+
+button > img {
+  vertical-align: middle;
+  margin-right: 7px;
+}
+
+h1 {
+  color: #06365f;
+}
+
+.text {
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  padding: 7px 20px;
+}
+
+.logo {
+  padding: 0 20px;
+}
+
+.logo > img {
+  margin: 0 15 px;
+}
+
+footer {
+  clear: both;
+  text-align: center;
+}
+
+ul {
+  padding-top: 5%;
+}
+
+li {
+  display: inline;
+  text-transform: uppercase;
+  color: #1c5380;
+  font-weight: bold;
+  margin: 0 15px;
+}
+
+.copyright {
+  color: grey;
 }
